# engineering-os

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_HISTORY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  coverage.xml  docker-entrypoint.sh  pyproject.toml
apps/api/.hypothesis/constants/: 0774ea3982f0a059  0e5e1e2c6747ba98  0f7ac31769b33e34  0f8fbfc9af0f9054  15317e23b119de65  1f65b443b26ce73f  1fded008f6f5044f  2026294aad42b22b  2109a69875fc0b85  25c5f9b67248e074  28d2673b7d09864e  29e5928b735b0d15  33ba53b5eaf4d9a6  360bdb283edabcfc  38dca92cf28dfc62  48cadb60b139a2ff  4c160961d1cb3624  512a6566f2e6696c  51a0a773673ed7d6  564e8cbeeae75974  5b4e0a3f818f2949  5bb332bae9a20cc2  692406d234fc122b  6cd78472cae39e64  759b5aff337c0c9d  76ec2f9f81fb36ce  838d2cfe550dedc5  8cc3b68bd5af0731  8dbe2d66841feab9  8f73f0789e66bfc3  9d4c586e64ceb666  9e25ee0125440197  a79feb04412021e7  ac66e8498cec9404  b6ccf706500b5937  cd5e206282448c90  d7a86f541c354b34  da39a3ee5e6b4b0d  e01fa5717e2847ca  e10027caf996ce71  (+6 more)
apps/api/migrations/: env.py  script.py.mako
apps/api/tests/: conftest.py  test_adr.py  test_api.py  test_auth.py  test_build.py  test_cache.py  test_contract.py  test_diagnostics.py  test_e2e.py  test_execution.py  test_explain.py  test_export.py  test_hardening.py  test_manifest.py  test_ops.py  test_performance.py  test_publish.py  test_readme.py  test_render.py  test_repository.py  test_resilience.py  test_service.py
(+197 files in other folders)
